# Lab1-2025TO

./: .gitignore  CMakeLists.txt  README.md
src/: AdministradorOperaciones.cpp  Division.cpp  Division.h  Multiplicacion.cpp  OperacionFactory.cpp  OperacionFactory.h  ProcesadorOperacion.cpp  ProcesadorOperacion.h  Resta.h  Suma.cpp  Suma.h
src/arbol/: ArbolExpresion.cpp  ArbolExpresion.h  Nodo.cpp  Nodo.h
src/core/: AdministradorOperaciones.cpp  AdministradorOperaciones.h  main.cpp
src/factories/: OperacionFactory.cpp  OperacionFactory.h
src/operaciones/: Multiplicacion.h  Operacion.h  Resta.cpp
src/parsers/: ProcesadorOperacion.cpp  ProcesadorOperacion.h
src/utilidades/: Utilidades.cpp  Utilidades.h
test/: test_administrador.cpp  test_arbol_expresion.cpp  test_procesador.cpp  test_suma.cpp
